--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -31,17 +31,32 @@
 	--color-black-950: oklch(0% 0 0); /* Pure black */
 
 	/* Wisteria */
-	--color-wisteria-50: oklch(97% 0.02 320);
-	--color-wisteria-100: oklch(94% 0.04 320);
-	--color-wisteria-200: oklch(89% 0.06 320);
-	--color-wisteria-300: oklch(84% 0.08 320);
-	--color-wisteria-400: oklch(79% 0.1 320);
-	--color-wisteria-500: oklch(74% 0.12 320);
-	--color-wisteria-600: oklch(69% 0.14 320);
-	--color-wisteria-700: oklch(64% 0.16 320);
-	--color-wisteria-800: oklch(59% 0.18 320);
-	--color-wisteria-900: oklch(54% 0.2 320);
-	--color-wisteria-950: oklch(49% 0.22 320);
+	--color-wisteria-50: oklch(97% 0.02 285);
+	--color-wisteria-100: oklch(94% 0.04 285);
+	--color-wisteria-200: oklch(89% 0.06 285);
+	--color-wisteria-300: oklch(84% 0.08 285);
+	--color-wisteria-400: oklch(79% 0.1 285);
+	--color-wisteria-500: oklch(74% 0.12 285);
+	--color-wisteria-600: oklch(69% 0.14 285);
+	--color-wisteria-700: oklch(64% 0.16 285);
+	--color-wisteria-800: oklch(59% 0.18 285);
+	--color-wisteria-900: oklch(54% 0.2 285);
+	--color-wisteria-950: oklch(49% 0.22 285);
+
+	/* Cherry-Blossom */
+	--color-cherry-blossom-50: oklch(97% 0.02 350);
+	--color-cherry-blossom-100: oklch(94% 0.04 350);
+	--color-cherry-blossom-200: oklch(89% 0.06 350);
+	--color-cherry-blossom-300: oklch(84% 0.08 350);
+	--color-cherry-blossom-400: oklch(79% 0.1 350);
+	--color-cherry-blossom-500: oklch(74% 0.12 350);
+	--color-cherry-blossom-600: oklch(69% 0.14 350);
+	--color-cherry-blossom-700: oklch(64% 0.16 350);
+	--color-cherry-blossom-800: oklch(59% 0.18 350);
+	--color-cherry-blossom-900: oklch(54% 0.2 350);
+	--color-cherry-blossom-950: oklch(49% 0.22 350);
+
+	--animate-slow-spin: spin 10s linear infinite;
 }
 
 @theme inline {
@@ -86,63 +101,82 @@
 
 :root {
 	--radius: 0.625rem;
-	--background: oklch(1 0 0);
-	--foreground: oklch(0.141 0.005 285.823);
+	--background: var(--color-black-200);
+	--foreground: var(--color-white-200);
+
 	--card: oklch(1 0 0);
 	--card-foreground: oklch(0.141 0.005 285.823);
-	--popover: oklch(1 0 0);
-	--popover-foreground: oklch(0.141 0.005 285.823);
+
+	--popover: var(--color-white-200);
+	--popover-foreground: var(--color-black-200);
+
 	--primary: oklch(0.21 0.006 285.885);
 	--primary-foreground: oklch(0.985 0 0);
+
 	--secondary: oklch(0.967 0.001 286.375);
 	--secondary-foreground: oklch(0.21 0.006 285.885);
+
 	--muted: oklch(0.967 0.001 286.375);
 	--muted-foreground: oklch(0.552 0.016 285.938);
-	--accent: oklch(0.967 0.001 286.375);
+
+	--accent: var(--color-wisteria-500);
 	--accent-foreground: oklch(0.21 0.006 285.885);
+
 	--destructive: oklch(0.577 0.245 27.325);
 	--border: oklch(0.92 0.004 286.32);
 	--input: oklch(0.92 0.004 286.32);
-	--ring: oklch(0.705 0.015 286.067);
+	--ring: var(--color-wisteria-400);
+	--outline: var(--color-wisteria-400);
+
 	--chart-1: oklch(0.646 0.222 41.116);
 	--chart-2: oklch(0.6 0.118 184.704);
 	--chart-3: oklch(0.398 0.07 227.392);
 	--chart-4: oklch(0.828 0.189 84.429);
 	--chart-5: oklch(0.769 0.188 70.08);
-	--sidebar: oklch(0.985 0 0);
-	--sidebar-foreground: oklch(0.141 0.005 285.823);
+
+	--sidebar: oklch(21% 0 0);
+	--sidebar-foreground: var(--color-white-200);
 	--sidebar-primary: oklch(0.21 0.006 285.885);
 	--sidebar-primary-foreground: oklch(0.985 0 0);
-	--sidebar-accent: oklch(0.967 0.001 286.375);
+	--sidebar-accent: var(--color-wisteria-500);
 	--sidebar-accent-foreground: oklch(0.21 0.006 285.885);
 	--sidebar-border: oklch(0.92 0.004 286.32);
-	--sidebar-ring: oklch(0.705 0.015 286.067);
+	--sidebar-ring: var(--color-wisteria-400);
 }
 
 .dark {
 	--background: oklch(0.141 0.005 285.823);
 	--foreground: oklch(0.985 0 0);
+
 	--card: oklch(0.21 0.006 285.885);
 	--card-foreground: oklch(0.985 0 0);
+
 	--popover: oklch(0.21 0.006 285.885);
 	--popover-foreground: oklch(0.985 0 0);
+
 	--primary: oklch(0.92 0.004 286.32);
 	--primary-foreground: oklch(0.21 0.006 285.885);
+
 	--secondary: oklch(0.274 0.006 286.033);
 	--secondary-foreground: oklch(0.985 0 0);
+
 	--muted: oklch(0.274 0.006 286.033);
 	--muted-foreground: oklch(0.705 0.015 286.067);
+
 	--accent: oklch(0.274 0.006 286.033);
 	--accent-foreground: oklch(0.985 0 0);
+
 	--destructive: oklch(0.704 0.191 22.216);
 	--border: oklch(1 0 0 / 10%);
 	--input: oklch(1 0 0 / 15%);
 	--ring: oklch(0.552 0.016 285.938);
+
 	--chart-1: oklch(0.488 0.243 264.376);
 	--chart-2: oklch(0.696 0.17 162.48);
 	--chart-3: oklch(0.769 0.188 70.08);
 	--chart-4: oklch(0.627 0.265 303.9);
 	--chart-5: oklch(0.645 0.246 16.439);
+
 	--sidebar: oklch(0.21 0.006 285.885);
 	--sidebar-foreground: oklch(0.985 0 0);
 	--sidebar-primary: oklch(0.488 0.243 264.376);
