--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -134,7 +134,7 @@
 	--chart-4: oklch(0.828 0.189 84.429);
 	--chart-5: oklch(0.769 0.188 70.08);
 
-	--sidebar: oklch(21% 0 0);
+	--sidebar: var(--color-black-300);
 	--sidebar-foreground: var(--color-white-200);
 	--sidebar-primary: oklch(0.21 0.006 285.885);
 	--sidebar-primary-foreground: oklch(0.985 0 0);
